[tool.poetry]
name = "videostreaming-packetlossstimulator"
version = "0.1.0"
description = ""
authors = ["Pei-Han Jiang <peihan945@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
imutils = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
